troca de hash por BYcript